learn-k8/assets/service.yml
apiVersion: v1
kind: Service
metadata:
  name: demoapp-service
  labels:
    name: demoapp
  namespace: demoapp
spec:
  type: NodePort
  selector:
    app: demoapp
  ports:
    -
      name: http
      port: 8080
      targetPort: 8080
